<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="GreenMasterBaseParameters" Id="{774ae7a8-e714-4ed6-8eb4-77ec7a39899e}">
    <Declaration><![CDATA[TYPE GreenMasterBaseParameters :
STRUCT
	System: SystemParametersFB;
	Regulation: RegulationParametersFB;
	Alarm: AlarmParameters;
	IO: IoParametersFB;
	Simulation: Simulation;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>